Changed_Image name
Fixed a wrong image name.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </summary>
             
             <aside>
-                <img src="./Images/racket.png" alt="Table Tennis Racket" >
+                <img src="./Images/Racket.png" alt="Table Tennis Racket" >
             </aside>
        </section>
     </header>
